--- a/propertyapp/templates/property-single.html
+++ b/propertyapp/templates/property-single.html
@@ -6,59 +6,94 @@
  {% block content %}
 
 
- <div class="hero page-inner overlay" style="background-image: url('{{ property.image.url }}')">
-     <div class="container">
-         <div class="row justify-content-center align-items-center">
-             <div class="col-lg-9 text-center mt-5">
-                 <h1 class="heading">{{ property.title }}</h1>
-                 <nav aria-label="breadcrumb">
-                     <ol class="breadcrumb text-center justify-content-center">
-                         <li class="breadcrumb-item"><a href="{% url 'propertyapp:index' %}">Home</a></li>
-                         <li class="breadcrumb-item active text-white-50" aria-current="page">{{ property.title }}</li>
-                     </ol>
-                 </nav>
-             </div>
-         </div>
-     </div>
- </div>
+ <div
+      class="hero page-inner overlay"
+      style="background-image: url('{% static "assets/images/hero1.jpg" %}')"
+    >
+      <div class="container">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-lg-9 text-center mt-5">
+            <h1 class="heading" data-aos="fade-up">
+              5232 California AVE. 21BC
+            </h1>
+
+            <nav
+              aria-label="breadcrumb"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
+              <ol class="breadcrumb text-center justify-content-center">
+                <li class="breadcrumb-item"><a href="{% url 'propertyapp:index' %}">Home</a></li>
+                <li class="breadcrumb-item">
+                  <a href="{% url 'propertyapp:properties' %}">Properties</a>
+                </li>
+                <li
+                  class="breadcrumb-item active text-white-50"
+                  aria-current="page"
+                >
+                  5232 California AVE. 21BC
+                </li>
+              </ol>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section">
+        <div class="container">
+          <div class="row justify-content-between">
+            <div class="col-lg-7">
+              <div class="img-property-slide-wrap">
+                <div class="img-property-slide">
+                  
+                  {% for image in propertyimages  %}
+                  <img src="{{ image.image.url }}" alt="Image" class="img-fluid" />
+                  {% endfor %}
+                    
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+                <h3 class="heading text-primary">{{property.title }}</h3>
+                 <p class="meta">{{property.location }}</p>
+                 <p class="price"><strong>Price:</strong> ${{property.price }}</p>
+                 <p><strong>Bedrooms:</strong> {{property.bedrooms }}</p>
+                 <p><strong>Bathrooms:</strong> {{property.bathrooms }}</p>
+              <h2 class="heading text-primary">{{property.address }}</h2>
+              <p class="text-black-50">
+                {{property.description }}
+              </p>
+  
+              <div class="d-block agent-box p-5">
+                <div class="img mb-4">
+                    <img src="{{ property.agent_image.url }}" alt="Agent Image" class="img-fluid">
+                </div>
+                <h3>{{property.agent_name }}</h3>
+                <p>{{property.agent_description }}</p>
+                <ul class="list-unstyled social dark-hover d-flex">
+                 <li class="me-1">
+                   <a href="{{property.instagram_url}}"><span class="icon-instagram"></span></a>
+                 </li>
+                 <li class="me-1">
+                   <a href="{Property.twitter_url}}"><span class="icon-twitter"></span></a>
+                 </li>
+                 <li class="me-1">
+                   <a href="{{Property.facebook_url}}"><span class="icon-facebook"></span></a>
+                 </li>
+                 <li class="me-1">
+                   <a href="{{Property.linkedin_url}}"><span class="icon-linkedin"></span></a>
+                 </li>
+               </ul>
+            </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
  
- <div class="section">
-     <div class="container">
-         <div class="row justify-content-between">
-             <div class="col-lg-7">
-                 <img src="{{ property.image.url }}" alt="{{ property.title }}" class="img-fluid mb-4">
-                 <p>{{ property.description }}</p>
-             </div>
-             <div class="col-lg-4">
-                 <h3 class="heading text-primary">{{ property.title }}</h3>
-                 <p class="meta">{{ property.location }}</p>
-                 <p class="price"><strong>Price:</strong> ${{ property.price }}</p>
-                 <p><strong>Bedrooms:</strong> {{ property.bedrooms }}</p>
-                 <p><strong>Bathrooms:</strong> {{ property.bathrooms }}</p>
-                 <div class="d-block agent-box p-5">
-                     <div class="img mb-4">
-                         <img src="{{ property.agent_image.url }}" alt="Agent Image" class="img-fluid">
-                     </div>
-                     <h3>{{ property.agent_name }}</h3>
-                     <p>{{ property.agent_description }}</p>
-                     <ul class="list-unstyled social dark-hover d-flex">
-                      <li class="me-1">
-                        <a href="{{property.instagram_url}}"><span class="icon-instagram"></span></a>
-                      </li>
-                      <li class="me-1">
-                        <a href="{{property.twitter_url}}"><span class="icon-twitter"></span></a>
-                      </li>
-                      <li class="me-1">
-                        <a href="{{property.facebook_url}}"><span class="icon-facebook"></span></a>
-                      </li>
-                      <li class="me-1">
-                        <a href="{{property.linkedin_url}}"><span class="icon-linkedin"></span></a>
-                      </li>
-                    </ul>
-                 </div>
-             </div>
-         </div>
-     </div>
- </div>
+
+                
  {% endblock %}
  
