--- a/propertyapp/templates/blog.html
+++ b/propertyapp/templates/blog.html
@@ -53,7 +53,7 @@
             <img src="{{ blog.featured_image.url }}" alt="{{ blog.title }}" class="blog-image">
             {% endif %}
             <div class="blog-info">
-                <h2><a href="{% url 'blog_detail' blog.slug %}">{{ blog.title }}</a></h2>
+                <h2><a href="{% url 'propertyapp:blog_detail' blog.slug %}">{{ blog.title }}</a></h2>
                 <p class="blog-meta">By {{ blog.author.username }} | {{ blog.created_at|date:"F d, Y" }}</p>
                 <p class="blog-excerpt">{{ blog.content|slice:200 }}...</p>
             </div>
