--- a/propertyapp/templates/layout.html
+++ b/propertyapp/templates/layout.html
@@ -73,13 +73,14 @@
               <li><a href="{% url 'propertyapp:services' %}">Services</a></li>
               <li><a href="{% url 'propertyapp:about' %}">About</a></li>
               <li class="has-children">
-                <a href="{% url 'propertyapp:blog' %}">Blog</a>
+                <a href="#">Blog</a>
                 <ul class="dropdown">
-                  <li><a href="#">Real Estate News</a></li>
-                  <li><a href="#">Market Trends</a></li>
-                  <li><a href="#">Buying Guides</a></li>
-                  <li><a href="#">Selling Tips</a></li>
-                  <li><a href="#">Home Improvement and Maintenance</a></li>
+                  
+                  {% for category in categories  %}
+                  <li><a href="/blogs/{{category.slug}}/">{{category.name}}</a></li>
+                    
+                  {% endfor %}
+                    
                 </ul>
               </li>
               <li><a href="{% url 'propertyapp:agent' %}">Agent</a></li>
