--- a/propertyapp/templates/accounts/register.html
+++ b/propertyapp/templates/accounts/register.html
@@ -11,52 +11,32 @@
   <div class="container_register">
     <div class="title">Registration</div>
     <div class="content">
-      <form method="post">
+      <form method="post" action="">
         {% csrf_token %}
         <div class="user-details">
           <div class="input-box">
-            <span class="details">Full Name</span>
-            <input type="text" name="full_name" placeholder="Enter your name" required>
-          </div>
-          <div class="input-box">
             <span class="details">Username</span>
-            <input type="text" name="username" placeholder="Enter your username" required>
+            <input type="text" name="username" placeholder="Enter your Username" required>
           </div>
           <div class="input-box">
             <span class="details">Email</span>
             <input type="email" name="email" placeholder="Enter your email" required>
           </div>
           <div class="input-box">
-            <span class="details">Phone Number</span>
-            <input type="tel" name="phone" placeholder="Enter your number" required>
+            <span class="details">Firstname</span>
+            <input type="text" name="first_name" placeholder="Enter your Firstname" required>
+          </div>
+          <div class="input-box">
+            <span class="details">Lastname</span>
+            <input type="text" name="last_name" placeholder="Enter your Lastname" required>
           </div>
           <div class="input-box">
             <span class="details">Password</span>
-            <input type="password" name="password" placeholder="Enter your password" required>
+            <input type="password" name="password1" placeholder="Enter your password" required>
           </div>
           <div class="input-box">
             <span class="details">Confirm Password</span>
-            <input type="password" name="confirm_password" placeholder="Confirm your password" required>
-          </div>
-        </div>
-        <div class="gender-details">
-          <input type="radio" name="gender" id="dot-1" value="male">
-          <input type="radio" name="gender" id="dot-2" value="female">
-          <input type="radio" name="gender" id="dot-3" value="other">
-          <span class="gender-title">Gender</span>
-          <div class="category">
-            <label for="dot-1">
-              <span class="dot one"></span>
-              <span class="gender">Male</span>
-            </label>
-            <label for="dot-2">
-              <span class="dot two"></span>
-              <span class="gender">Female</span>
-            </label>
-            <label for="dot-3">
-              <span class="dot three"></span>
-              <span class="gender">Prefer not to say</span>
-            </label>
+            <input type="password" name="password2" placeholder="Confirm your password" required>
           </div>
         </div>
         <div class="button">
