--- a/propertyapp/templates/index.html
+++ b/propertyapp/templates/index.html
@@ -81,7 +81,7 @@
               </a>
 
               <div class="property-content">
-                <div class="price mb-2"><span>{{property.price}}</span></div>
+                <div class="price mb-2"><span>${{property.price}}</span></div>
                 <div>
                   <span class="d-block mb-2 text-black-50"
                     >{{property.address}}</span
