--- a/propertyapp/templates/properties.html
+++ b/propertyapp/templates/properties.html
@@ -65,7 +65,7 @@
                   </a>
 
                   <div class="property-content">
-                    <div class="price mb-2"><span>{{property.price}}</span></div>
+                    <div class="price mb-2"><span>${{property.price}} </span></div>
                     <div>
                       <span class="d-block mb-2 text-black-50"
                         >{{property.address}}</span
@@ -147,7 +147,7 @@
               </a>
 
               <div class="property-content">
-                <div class="price mb-2"><span>{{PropertyItem.price }}</span></div>
+                <div class="price mb-2"><span>${{PropertyItem.price }}</span></div>
                 <div>
                   <span class="d-block mb-2 text-black-50"
                     >{{PropertyItem.address }}</span
